theme/static/css/main.css
/* normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
html{font-family:serif;line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:0.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

* {
    box-sizing: border-box;
}

html, body {
    margin: auto;
    padding: 1em 0 1em;
    width: 90%;
    max-width: 45em;
    background: none repeat scroll 0% 0% #fefefe;
    color: #222;
    font-family: Palatino, "Palatino Linotype", "Book Antiqua", "Palatino LT STD", serif; 
    font-variant-ligatures: common-ligatures;
    font-variant-numeric: oldstyle-nums diagonal-fractions;
    font-size: 14pt;
    line-height: 1.7em;
}

/* 6 7 8 9 10 11 12 14 16 18 21 24 3 6 4 8 60 72 */

p {
    white-space: pre-wrap;
}

b, strong {
    color: #333;
    font-weight: bold,
}

a {
    text-decoration: none;
    color: #c5000b;
}

a:hover {
    text-decoration: none;
    border-bottom: 1px dotted;
}

h1 {
    margin-top: 1.2em;
    font-size: 1.7em;
}
h2 {
    margin-top: 1.2em;
    font-size: 1.5em;
}
h3 {
    margin-top: 1.2em;
    font-size: 1.3em;
}
h4 {
    margin-top: 1.2em;
    font-size: 1.1em;
}
h5 {
    margin-top: 1.2em;
    font-size: 1.1em;
    font-style: italic;
}
h6 {
    margin-top: 1.2em;
    font-size: 1.1em;
    font-weight: normal;
    font-style: italic;
}

h1, h2, h3, h4, h5, h6 {
    /*line-height: 1em;*/
    margin-top: 1.2em;
    margin-bottom: 0.9em;
    color: #c5000b;
}

#article-main {
    margin-top: 3em;
}

time {
    color: #888;
    font-style: normal;
    font-size: 0.7em;
    font-family: monospace, monospace;
    font-variant-numeric: slashed-zero diagonal-fractions;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    font-weight: normal;
}   

.title {
    margin-bottom: 5em;
}

.title h1 {
    margin-bottom: 0.5em;
}


hr {
    border: none;
    color: #333;
    margin: 3em auto 4em;
    text-align: center;
}

hr:after {
    content: '* * *';
    font-weight: bold;
}

blockquote {
    border-left: 1px solid #c5000b;
    padding: 0 12px 0 12px;
    line-height: 1.1em;
}

.epigraph .attribution {
    font-size: 0.8em;
    color: #888;
    padding-left: 3em;
}


.sidebar {
    display: block;
    max-width: 20em;
    margin-left: 0.5em;
    margin-bottom: 1em;
    margin-top: 0.5em;
    /*margin-right: -20em;*/
    padding: -0.5em;
    padding-right: 1em; 
    padding-left: 1em; 
    font-size: 0.8em; 
    float: right;
    border: 1px solid #c5000b;
    padding-top: 0;
    line-height: 1em;
}

.sidebar-title,
.topic-title  {
    font-size: 1.2em;
    font-weight: bold;
    color: #c5000b;
    margin-bottom: 0;
}

.sidebar .sidebar-subtitle {
    font-style: italic;
    color: #444;
    margin-top: 0.1em;
}

.topic {
    width: 100%;
    padding: 1em;
    padding-top: 0em;
    border: 1px solid #c5000b;
}

.admonition {
    border: 1px solid #c5000b;
    padding: 0.5em;
    padding-top: 0px;
    line-height: 1.2;
    max-width: 75%;
    align-self: center;
    margin: auto;
}

.admonition .admonition-title {
    border-bottom: 1px dotted;
    border-color: inherit;
    color: #c5000b;
    margin-left: -0.5em;
    margin-right: -0.5em;
    margin-top: 0;
    padding: 0.5em;
    line-height: 1em;
    font-size: 0.8em;
    font-family: monospace, monospace;
    font-weight: bold;
    letter-spacing: 0.1em;
    text-transform: uppercase;
}

footer {
    margin-top: 10em;
    margin-bottom: 0;
    text-align: center;
    align-self: center;
    font-size: 0.9em;
    color: #888;
}

footer a {
    text-decoration: none;
    color: #888;
    font-weight: bold;
}

::selection {
    background: #ffffaa;
}

::-moz-selection {
    background: #ffffaa;
}

code, kbd, pre, samp, tt {
    font-family: monospace, monospace;
    font-variant-numeric: slashed-zero diagonal-fractions;
    font-size: 0.8em;
    letter-spacing: 0.1em;
}

mark {
    background: #ffffaa;
    padding-left: 0.3em;
    padding-right: 0.3em;
}

kbd {
    text-transform: lowercase;
    padding: 0.2em;
    border: 1px solid rgb(136, 136, 136);
    border-radius: 0.5em;
    background: #eee;
    font-variant: small-caps;
    box-shadow: 0px 2px 2px #aaa;
}

img, .figure {
    max-width: 100%;
    display: block;
    margin: auto;
    margin-bottom: 1em;
    margin-top: 1em;
}

.figure > img{
    margin-bottom: 0em;
    margin-top: 0em;
}

caption, figcaption, .figure .caption {
    font-size: 0.8em;
    color: #888;
    line-height: 1.2em;
    margin-top: 0;
    text-align: center;
}


iframe {
    border: 1px dotted #888;
}

table, thead, tbody, td, th, tr {
    font-variant-numeric: tabular-nums;
}

.footnote {
    font-size: 0.8em;
}

.footnote:first-of-type {
    margin-top: 4em;
}

.footnote table, .footnote thead, .footnote tbody, .footnote td, .footnote th, .footnote tr{
    font-variant-numeric: oldstyle-nums diagonal-fractions;
}



.article-list {
    margin-bottom: 4em;
}

.archive-list {
    list-style-type: none;
}

.archive-list li {
    padding: 5px 0;
}

.archive-list li a {
    display: inline;
    font-weight: normal;
    color: #222;
}

.archive-list li > span {
    text-align: right;
    float: right;
}

.link-box {
    display: inline-block;
    line-height: 1em;
    font-size: 0.7em;
    text-transform: uppercase;
    padding: 0.5em;
    letter-spacing: 0.2em;
    font-family: monospace, monospace;
    font-variant-numeric: slashed-zero diagonal-fractions;
    border-color: #c5000b;
    border: 1px solid;
    transition: background-color 0.5s;
    -webkit-transition: background-color 0.5s;
}

.link-box-selected,
.link-box:hover {
    background: #c5000b;
    border-color: #c5000b;
    color: #ffffff;
    border: 1px solid;
}

.link-no-box {
    font-size: 0.7em;
    color: #c5000b;
    border-bottom: none;
    text-transform: uppercase;
    letter-spacing: 0.2em;
    padding: 0.5em;
    font-family: monospace, monospace;
    font-variant-numeric: slashed-zero diagonal-fractions;
}

.paginator {
    text-align: center;
    display: block;
    align-self: center;
}

.paginator a {
    font-weight: bold;
}


.highlight pre {
    border-radius: 5px;
    padding: 0.9em;
    font-size: 0.8em;
    line-height: 1.1em;
}

.admonition-title ::selection,
.highlight ::selection {
    background: #111;
    color: #eeeeee;
}

.admonition-title ::-moz-selection,
.highlight ::-moz-selection {
    background: #111;
    color: #eeeeee;   
}

